gcc/testsuite/g++.dg/concepts/refine3.C
concept Incrementable<typename T> { }

concept InputIterator<typename Iter>
  : Incrementable<int> // { dg-error "parameter" }
{
}
